--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 chesscom-openapi = "0.1.1"
+chrono = "0.4.23"
+serde = { version = "1.0.155", features = ["serde_derive"] }
+serde_derive = "1.0.155"
+serde_json = "1.0.94"
+tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread", "full", "macros"] }
