--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chesscom-openapi = "0.1.1"
 chrono = "0.4.23"
+reqwest = "0.11.14"
 serde = { version = "1.0.155", features = ["serde_derive"] }
 serde_derive = "1.0.155"
 serde_json = "1.0.94"
