--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ reqwest = "0.11.14"
 serde = { version = "1.0.155", features = ["serde_derive"] }
 serde_derive = "1.0.155"
 serde_json = "1.0.94"
+serde_test = "1.0.155"
 tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread", "full", "macros"] }
