--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ chesscom-openapi = "0.1.1"
 chrono = "0.4.23"
 futures = "0.3.28"
 glob = "0.3.1"
+lazy_static = "1.4.0"
 linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
 linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
+ndarray = "0.15.6"
 regex = "1.7.1"
 reqwest = "0.11.14"
 serde = { version = "1.0.155", features = ["serde_derive"] }
