--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4.0"
 linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
 linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
 ndarray = "0.15.6"
+pretty_assertions = "1.3.0"
 regex = "1.7.1"
 reqwest = "0.11.14"
 serde = { version = "1.0.155", features = ["serde_derive"] }
