--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ edition = "2021"
 [dependencies]
 chesscom-openapi = "0.1.1"
 chrono = "0.4.23"
+csv = "1.2.2"
 futures = "0.3.28"
 glob = "0.3.1"
 lazy_static = "1.4.0"
 linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
 linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
 ndarray = "0.15.6"
+pleco = "0.5.0"
 pretty_assertions = "1.3.0"
 regex = "1.7.1"
 reqwest = "0.11.14"
