--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ pleco = "0.5.0"
 pretty_assertions = "1.3.0"
 regex = "1.7.1"
 reqwest = "0.12.4"
+rschess = "1.0.0"
 serde = { version = "1.0.155", features = ["serde_derive"] }
 serde_derive = "1.0.155"
 serde_json = "1.0.94"
