--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ edition = "2021"
 chesscom-openapi = "0.1.1"
 chrono = "0.4.23"
 csv = "1.2.2"
+fp-core = "0.1.9"
 futures = "0.3.28"
 glob = "0.3.1"
 lazy_static = "1.4.0"
-linfa = { version = "0.6.1", features = ["serde", "serde_crate"] }
-linfa-trees = { version = "0.6.1", features = ["serde", "serde_crate"] }
+linfa = { version = "0.7.0", features = ["serde", "serde_crate"] }
+linfa-trees = { version = "0.7.0", features = ["serde", "serde_crate"] }
 ndarray = "0.15.6"
 pleco = "0.5.0"
 pretty_assertions = "1.3.0"
