--- a/openings/Cargo.toml
+++ b/openings/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.3.0"
+serde = { version = "1.0.203", features = ["std", "derive", "serde_derive"] }
+serde_json = "1.0.119"
