--- a/openings/Cargo.toml
+++ b/openings/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 csv = "1.3.0"
 serde = { version = "1.0.203", features = ["std", "derive", "serde_derive"] }
 serde_json = "1.0.119"
+chess-pgn = { path = "../pgn"}
