--- a/openings/Cargo.toml
+++ b/openings/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 csv = "1.3.0"
-serde = { version = "1.0.203", features = ["std", "derive", "serde_derive"] }
-serde_json = "1.0.119"
+serde = { version = "1.0.155", features = ["serde_derive"] }
+serde_derive = "1.0.155"
+serde_json = "1.0.94"
+serde_test = "1.0.155"
 chess-pgn = { path = "../pgn"}
