--- a/openings/Cargo.toml
+++ b/openings/Cargo.toml
@@ -10,3 +10,4 @@ serde_derive = "1.0.155"
 serde_json = "1.0.94"
 serde_test = "1.0.155"
 chess-pgn = { path = "../pgn"}
+trie-rs = { version = "0.4.2", features = ["serde"] }
