--- a/pgn/Cargo.toml
+++ b/pgn/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 pgn-reader = "0.26.0"
 serde = { version = "1.0.203", features = ["std", "derive", "serde_derive"] }
+shakmaty = "0.27.0"
