--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+chesscom = { path = "../chesscom"}
 dioxus = { version = "0.5", features = ["web", "router"] }
 
 # Debug
