--- a/pgn/Cargo.toml
+++ b/pgn/Cargo.toml
@@ -2,7 +2,7 @@
 name = "chess-pgn"
 version = "0.1.0"
 edition = "2021"
-
+resolver = "2"
 [dependencies]
 pgn-reader = "0.26.0"
 serde = { version = "1.0.203", features = ["std", "derive", "serde_derive"] }
